fix: fix overflow

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -472,10 +472,12 @@ a:hover, a:active {
 @media (max-width: 768px) {
  .container {
     max-width: 768px;
+    overflow: hidden;
  }
 
  .header-container {
      padding: 0 60px;
+     width: calc(100% -40px);
  }
 
  .section {
@@ -501,7 +503,7 @@ a:hover, a:active {
     background-repeat: no-repeat;
     background-position: center -90px;
     height: 499px;
-    width: 768px;
+    max-width: 768px;
  }
    
 .hero-section {
@@ -526,10 +528,7 @@ a:hover, a:active {
      margin-top: 59px;
  }
 
- .title-wrapper {
-    
- }
-
+ 
   #skills {
     font-size: 32px;
     line-height: 40px; 
